<resources>
    <string name="app_name">Friendster</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit__friend_">Edit Friend</string>
    <string name="title_activity_add__friend">Add Friend</string>
    <string name="edit_add_field_label">Name</string>
    <string name="add_friend_text_view">Add Friend</string>
    <string name="add_friend_button_label">Add</string>
    <string name="edit_friend_text_view">Edit Friend</string>
    <string name="edit_friend_button_label">Apply</string>
    <string name="delete_friend_button_label">Delete Friend</string>
</resources>
